Progress on proposal

--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -85,11 +85,13 @@ various sources of uncertainty \cite{Kennedy}. For example, the simple yet commo
 assumes the simulator output gives the mean of the true process, subject to white noise. The prior distribution $\pi_0$ encodes domain knowledge about the 
 process parameter $\theta$ and statistical parameter $\sigma^2$. The problem of inferring $\theta$ given the noisy observations $y$ and prior beliefs $\pi_0$ is referred to as a \textit{Bayesian inverse problem} \cite{Stuart}. Solving such a problem is defined 
  as obtaining the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2 I)\pi_0(\theta)$, which typically involves using an iterative inference procedure like Markov Chain Monte Carlo (MCMC). In practice, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to fit a Gaussian process 
-emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Kennedy, Fer, Cleary}. For example, Gaussian process emulation is commonly employed in terrestrial carbon modeling to calibrate sophisticated carbon cycle simulations that can have a runtime of many hours \cite{Fer}. A second complication that commonly arises in scientific applications is the challenge of capturing complex spatiotemporal dynamics of the underlying process while accurately quantifying variation in model parameters across space and time. 
-Limited by computational constraints, scientists often calibrate physical models in limited spatial and temporal domains, treating process parameters $\theta$ and statistical parameters (e.g. $\sigma^2$) as fixed. For example, terrestrial carbon models are typically calibrated independently at ecological data collection sites, reducing the generalizability of calibrated models and preventing informed spatiotemporal decision making \cite{Fer2}. Computational advances offer the potential for large-scale calibration of dynamic computer models over space and time. In the ecological setting this would involve assimilating remotely sensed and ground-based site data on large geographic scales, ...[finish this]
+emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Fer, Kennedy, Cleary}. For example, Gaussian process emulation is commonly employed in terrestrial carbon modeling to calibrate sophisticated carbon cycle simulations that can have a runtime of many hours \cite{Fer}. A second complication that commonly arises in scientific applications is the challenge of capturing complex spatiotemporal dynamics of the underlying process while accurately quantifying uncertainty across both of these dimensions. 
+Limited by computational constraints, scientists often calibrate physical models in limited spatial and temporal domains, treating process parameters $\theta$ and statistical parameters (e.g. $\sigma^2$) as fixed. For example, terrestrial carbon models are typically calibrated independently at different ecological data collection sites \cite{Fer2}. Large-scale, multi-site parameter calibration has the potential to drastically increase the generalizability of carbon models and improve spatiotemporally-informed decision making. 
+My proposal seeks to address these challenges--emulator uncertainty quantification and spatiotemporal model calibration--with the goal of making such large-scale calibration feasible and accurate. 
 
-Hierarchical statistical models can add spatial and temporal structure to outputs $y$, process parameters $\theta$, and statistical parameters (e.g. $\sigma^2$), but further increase the computational burden of the inference procedure. 
-%[finish sentence, maybe be more explicit that my proposal addresses the two issues detailed above]
+
+Computational advances offer the potential for large-scale calibration of dynamic computer models over space and time. In the ecological setting this would involve assimilating remotely sensed and ground-based site data on large geographic scales, ...[finish this]
+
  
  There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, little research has been done in designing algorithms to properly propagate emulator uncertainty through the inference procedure. Naive emulation would simply use the Gaussian process mean $m(\theta)$ in place of the process model evaluation $f(\theta)$, thus replacing the true likelihood $N(f(\theta), \sigma^2 I)$
 with the approximation $N(m(\theta), \sigma^2 I)$. This completely ignores the uncertainty introduced by using $\hat{f}$ in place of $f$, leading to overly confident posterior estimates. Ad hoc methods to propagate emulator uncertainty have included a pointwise variance adjustment 
