Progress on proposal

--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -88,14 +88,10 @@ process parameter $\theta$ and statistical parameter $\sigma^2$. The problem of 
 emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Fer, Kennedy, Cleary}. For example, Gaussian process emulation is commonly employed in terrestrial carbon modeling to calibrate sophisticated carbon cycle simulations that can have a runtime of many hours \cite{Fer}. A second complication that commonly arises in scientific applications is the challenge of capturing complex spatiotemporal dynamics of the underlying process while accurately quantifying uncertainty across both of these dimensions. 
 Limited by computational constraints, scientists often calibrate physical models in limited spatial and temporal domains, treating process parameters $\theta$ and statistical parameters (e.g. $\sigma^2$) as fixed. For example, terrestrial carbon models are typically calibrated independently at different ecological data collection sites \cite{Fer2}. Large-scale, multi-site parameter calibration has the potential to drastically increase the generalizability of carbon models and improve spatiotemporally-informed decision making. 
 My proposal seeks to address these challenges--emulator uncertainty quantification and spatiotemporal model calibration--with the goal of making such large-scale calibration feasible and accurate. 
-
-
-Computational advances offer the potential for large-scale calibration of dynamic computer models over space and time. In the ecological setting this would involve assimilating remotely sensed and ground-based site data on large geographic scales, ...[finish this]
-
  
  There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, little research has been done in designing algorithms to properly propagate emulator uncertainty through the inference procedure. Naive emulation would simply use the Gaussian process mean $m(\theta)$ in place of the process model evaluation $f(\theta)$, thus replacing the true likelihood $N(f(\theta), \sigma^2 I)$
 with the approximation $N(m(\theta), \sigma^2 I)$. This completely ignores the uncertainty introduced by using $\hat{f}$ in place of $f$, leading to overly confident posterior estimates. Ad hoc methods to propagate emulator uncertainty have included a pointwise variance adjustment 
-$\sigma^2 + k(\theta, \theta)$ or re-sampling scheme in which a sample $\hat{y}_{\theta} \sim N(m(\theta), k(\theta, \theta))$ is used to replace $f(\theta)$ as the likelihood mean. \cite{Cleary, Fer}. While an improvement over the naive baseline, these methods treat emulator uncertainty as independent across different values of $\theta$, ignoring the correlation structure captured in the predictive variance $k(\cdot, \cdot)$. Uncertainty quantification considerations are complicated further when spatiotemporal dynamics are included. There exists a recent body of literature that considers spatially or temporally indexed model outputs, addressing computational challenges by using basis function approximations \cite{Fadikar} or thrifty alternatives to full Bayesian inference \cite{Sun}. However, these approaches do not consider variation in process parameters $\theta$ and typically sacrifice full uncertainty quantification to ease computational burdens. 
+$\sigma^2 + k(\theta, \theta)$ or re-sampling scheme in which a sample $\hat{f}_{\theta} \sim N(m(\theta), k(\theta, \theta))$ replaces $f(\theta)$ as the likelihood mean. \cite{Fer, Cleary}. While an improvement over the naive baseline, these methods treat emulator uncertainty as independent across different values of $\theta$, ignoring the correlation structure captured in the predictive variance $k(\cdot, \cdot)$. Uncertainty quantification considerations are complicated further when spatiotemporal dynamics are included. Modern dynamic hierarchical models provide an ideal framework for quantifying spatial and temporal variation in model parameters \cite{Wikle}, but such models are typically infeasible in computer modeling settings due to their computational demands. The existing computer modeling literature has focused on spatially or temporally indexed simulator outputs \cite{Fadikar}, but rarely considers variation in process parameters. Existing examples of assimilating large-scale spatiotemporal datasets with computer models typically utilize thrifty alternatives to full Bayesian inference, sacrificing uncertainty quantification to ease computational burdens \cite{Sun}.
 
 \noindent
 \textbf{Research Plan.} To address the challenges highlighted above, I will begin by investigating the fundamental issue of emulator uncertainty in the 
