--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -89,19 +89,19 @@ emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approx
 Limited by computational constraints, scientists often calibrate physical models in limited spatial and temporal domains, treating process parameters $\theta$ and statistical parameters (e.g. $\sigma^2$) as fixed. For example, terrestrial carbon models are typically calibrated independently at different ecological data collection sites \cite{Fer2}. Large-scale, multi-site parameter calibration has the potential to drastically increase the generalizability of carbon models and improve spatiotemporally-informed decision making. 
 My proposal seeks to address these challenges--emulator uncertainty quantification and spatiotemporal model calibration--with the goal of making such large-scale calibration feasible and accurate. 
  
- There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, little research has been done in designing algorithms to properly propagate emulator uncertainty through the inference procedure. Naive emulation would simply use the Gaussian process mean $m(\theta)$ in place of the process model evaluation $f(\theta)$, thus replacing the true likelihood $N(f(\theta), \sigma^2 I)$
+ There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, few studies have focused on correctly propagating emulator uncertainty through the inference procedure. Naive emulation would simply use the Gaussian process mean $m(\theta)$ in place of the process model evaluation $f(\theta)$, thus replacing the true likelihood $N(f(\theta), \sigma^2 I)$
 with the approximation $N(m(\theta), \sigma^2 I)$. This completely ignores the uncertainty introduced by using $\hat{f}$ in place of $f$, leading to overly confident posterior estimates. Ad hoc methods to propagate emulator uncertainty have included a pointwise variance adjustment 
-$\sigma^2 + k(\theta, \theta)$ or re-sampling scheme in which a sample $\hat{f}_{\theta} \sim N(m(\theta), k(\theta, \theta))$ replaces $f(\theta)$ as the likelihood mean. \cite{Fer, Cleary}. While an improvement over the naive baseline, these methods treat emulator uncertainty as independent across different values of $\theta$, ignoring the correlation structure captured in the predictive variance $k(\cdot, \cdot)$. Uncertainty quantification considerations are complicated further when spatiotemporal dynamics are included. Modern dynamic hierarchical models provide an ideal framework for quantifying spatial and temporal variation in model parameters \cite{Wikle}, but such models are typically infeasible in computer modeling settings due to their computational demands. The existing computer modeling literature has focused on spatially or temporally indexed simulator outputs \cite{Fadikar}, but rarely considers variation in process parameters. Existing examples of assimilating large-scale spatiotemporal datasets with computer models typically utilize thrifty alternatives to full Bayesian inference, sacrificing uncertainty quantification to ease computational burdens \cite{Sun}.
+$\sigma^2 + k(\theta, \theta)$ or re-sampling scheme in which a sample $\hat{f}_{\theta} \sim N(m(\theta), k(\theta, \theta))$ replaces $f(\theta)$ as the likelihood mean. \cite{Fer, Cleary}. While an improvement over the naive baseline, these methods treat emulator uncertainty as independent across different values of $\theta$, ignoring the correlation structure captured in the predictive variance $k(\cdot, \cdot)$. Uncertainty quantification is further complicated when spatiotemporal dynamics are included. Modern dynamic hierarchical models provide an ideal framework for quantifying spatial and temporal variation in model parameters \cite{Wikle}, but such models are typically infeasible in computer modeling settings due to their computational demands. The existing computer modeling literature has focused on spatially or temporally indexed simulator outputs \cite{Fadikar}, but rarely considers variation in process parameters. Existing examples of assimilating large-scale spatiotemporal datasets with computer models typically utilize thrifty alternatives to full Bayesian inference, sacrificing uncertainty quantification to ease computational burdens \cite{Sun}.
 
 \noindent
 \textbf{Research Plan.} To address the challenges highlighted above, I will begin by investigating the fundamental issue of emulator uncertainty in the 
-static setting. Building upon this foundation, I will then work to embed this core methodology in a dynamic spatiotemporal statistical model. These modeling steps will pose increasingly difficult computational challenges, which I intend to address via an interdisciplinary approach, drawing from spatiotemporal statistics, Bayesian inverse problem theory, and machine learning to develop novel dimensionality reduction and approximation methods. Throughout this process, I will validate these methods on benchmark computer modeling and scientific machine learning problems \cite{Surjanovic, Takamoto}, as well as  common terrestrial carbon models used for ecological forecasting \cite{Dietze, Canadell}. This work is collaborative in nature, co-advised by Jonathan Huggins, who has expertise in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
+non-dynamic setting. Building upon this foundation, I will then work to embed this core methodology in a dynamic spatiotemporal statistical model. These modeling steps will pose increasingly difficult computational challenges, which I intend to address via an interdisciplinary approach, drawing from spatiotemporal statistics, Bayesian inverse problem theory, and machine learning to develop novel dimensionality reduction and approximation methods. Throughout this process, I will validate these methods on benchmark computer modeling and scientific machine learning problems \cite{Surjanovic, Takamoto}, as well as terrestrial carbon models commonly used for ecological forecasting \cite{Dietze}. This work is collaborative in nature, co-advised by Jonathan Huggins, who has expertise in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
  
  \textbf{1. Propagating Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty to fill the current gap in the literature. I will develop novel algorithms for propagating Gaussian process uncertainty and compare their performance to the baseline independent variance adjustment schemes detailed above. To incorporate the predictive Gaussian process correlation structure, I will leverage the correlation between the current and proposed parameter values in Metropolis-Hastings MCMC algorithms. For example, the re-sampling scheme \cite{Fer} can be generalized so that 
- $(\hat{y}_{\theta}, \hat{y}_{\theta^\prime})$ are drawn jointly from the Gaussian process, where $\theta$ and $\theta^\prime$ are the current and proposed parameter values, respectively. I will also develop an alternate set of algorithms by integrating the Gaussian process out of the likelihood, thus averaging over the emulator uncertainty. This integral can be calculated jointly over $(\hat{f}(\theta), \hat{f}(\theta^\prime))$ and has an analytic solution for the independent Gaussian error model. I will then generalize these ideas to error models for simulators with time-indexed output $f(\theta) = (f_1, f_2, \dots, f_T)$, a common feature in ecological models. To accomplish this I will explore two approaches, (i.) reducing the dimensionality of the output via basis-function 
- approximations, allowing the application of my previous methods to each basis dimension separately, and (ii.) directly emulating the likelihood under an auto-regressive error model instead of the simulator itself, thus reducing back to univariate outputs. [cite]
+ $(\hat{f}_{\theta}, \hat{f}_{\theta^\prime})$ are drawn jointly from the Gaussian process, where $\theta$ and $\theta^\prime$ are the current and proposed parameter values, respectively. I will also develop an alternate set of algorithms by integrating the Gaussian process out of the likelihood, thus averaging over the emulator uncertainty. This integral can be calculated jointly over the current and proposed parameter values and has an analytic solution for the independent Gaussian error model. I will then generalize these ideas to error models for simulators with time-indexed output $f(\theta) = (f_1, f_2, \dots, f_T)$, a common feature of ecological simulations. To accomplish this I will analyze two approaches: (i.) reducing the dimensionality of the output via basis-function 
+ approximations, allowing the application of my previous methods to each basis dimension separately, and (ii.) directly emulating the likelihood under an auto-regressive error model instead of the simulator itself, thus reducing back to univariate outputs \cite{Fer}.
  My analysis will include the derivation of theoretical results obtained by extending existing parameter calibration theory \cite{Tuo}, numerical tests from the 
- \text{Virtual Library of Simulation Experiments} \cite{Surjanovic}, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This ecological simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to compare against brute force approaches that are typically not possible for larger models. This work will contribute novel theoretical results and off-the-shelf, scalable algorithms for emulator uncertainty propagation in statistical inference, supplanting existing ad hoc approaches with rigorous, validated methodology. 
+ \text{Virtual Library of Simulation Experiments} \cite{Surjanovic}, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This ecological simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to validate against more computationally intensive approaches. This work will contribute novel theoretical results and off-the-shelf, scalable algorithms for emulator uncertainty propagation in statistical inference, supplanting existing ad hoc approaches with rigorous, validated methodology. 
 
  \textbf{2. Spatiotemporal Dynamics.}
  The next phase of my proposal involves embedding computer models within a spatiotemporal statistical framework, while continuing to build upon the uncertainty quantification work detailed above. I will adopt a modern state-space framework, drawing from recent advances in Bayesian filtering 
@@ -141,10 +141,15 @@ Cambridge, United Kingdom and New York, NY, USA, pp. 673–816, doi:10.1017/9781
 \bibitem{Stuart} A. M. Stuart (2010). Inverse problems: A Bayesian perspective. Acta Numerica, 19, pp 451-559 doi:10.1017/
 S0962492910000061.
 \bibitem{Cleary} Emmet Cleary, Alfredo Garbuno-Inigo, Shiwei Lan, Tapio Schneider, Andrew M. Stuart, “Calibrate, emulate, sample”, Journal of Computational Physics, Volume 424, 2021, 109716, ISSN 0021-9991, https://doi.org/10.1016/j.jcp.2020.109716.
+\bibitem{Fadikar} Fadikar et al, Calibrating a Stochastic, Agent-Based Model Using Quantile-Based Emulation. SIAM/ASA Journal on Uncertainty Quantification. https://doi.org/10.1137/17M1161233.
+\bibitem{Sun} Sun et al, Synthesizing simulation and field data of solar irradiance. Stat Anal Data Min: The ASA Data Sci Journal. 2019; 12: 311– 324. https://doi.org/10.1002/sam.11414
+\bibitem{Surjanovic} Surjanovic et al, Virtual Library of Simulation Experiments: Test Functions and Datasets.
+\bibitem{Takamoto} Takamoto et al, PDEBench: An Extensive Benchmark for Scientific Machine Learning. Thirty-sixth Conference on Neural Information Processing Systems Datasets and Benchmarks Track
+\bibitem{Dietze} Dietze et al, “Iterative near-term ecological forecasting: Needs, opportunities, and challenges”, Proceedings of the National Academy of Sciences, 115, 7, 1424-1432, 2018.
+\bibitem{Tuo} Tuo et al, A theoretical framework for calibration in computer models: parametrization, estimation and convergence properties. 
 
 
 \bibitem{Cayelan} Cayelan C. Carey, Whitney M. Woelmer, Mary E. Lofton, Renato J. Figueiredo, Bethany J. Bookout, Rachel S. Corrigan, Vahid Daneshmand, Alexandria G. Hounshell, Dexter W. Howard, Abigail S. L. Lewis et al (2022) Advancing lake and reservoir water quality management with near-term, iterative ecological forecasting, Inland Waters, 12:1, 107-120, DOI: 10.1080/20442041.2020.1816421
-\bibitem{Dietze} Dietze et al, “Iterative near-term ecological forecasting: Needs, opportunities, and challenges”, Proceedings of the National Academy of Sciences, 115, 7, 1424-1432, 2018.
 \bibitem{Fer2} Istem Fer, Alexey Shiklomanov, Kimberly A. Novick, Christopher M. Gough, M. Altaf Arain, Jiquan Chen, Bailey Murphy, Ankur R. Desai, Michael C. Dietze: Capturing site-to-site variability through Hierarchical Bayesian calibration of a process-based dynamic vegetation model, bioRxiv 2021.04.28.441243; doi: https://doi.org/10.1101/2021.04.28.441243. 
 \bibitem{Arab} Arab, Ali \& Hooten, Mevin \& Wikle, Christopher. (2007). Hierarchical Spatial Models. Encyclopedia of geographical information science.
 \bibitem{Hefley} Trevor J. Hefley, Mevin B. Hooten, Ephraim M. Hanks, Robin E. Russell, Daniel P. Walsh, Dynamic spatio-temporal models for spatial data, Spatial Statistics.
@@ -152,11 +157,6 @@ S0962492910000061.
 \bibitem{Sarkka} Särkkä, S. (2013). Bayesian Filtering and Smoothing (Institute of Mathematical Statistics Textbooks). Cambridge: Cambridge University Press. doi:10.1017/CBO9781139344203
 \bibitem{Waring} Richard H. Waring, Steven W. Running, CHAPTER 10 - Advances in Eddy-Flux Analyses, Remote Sensing, and Evidence of Climate Change, Forest Ecosystems (Third Edition), Academic Press, 2007, Pages 317-344, ISBN 9780123706058, https://doi.org/10.1016/B978-012370605-8.50017-7.
 \bibitem{Clark} Clark, James S. 2005. Why environmental scientists are becoming Bayesians. Ecology Letters, Vol. 8: 2-14
-\bibitem{Sun} Sun et al, Synthesizing simulation and field data of solar irradiance. Stat Anal Data Min: The ASA Data Sci Journal. 2019; 12: 311– 324. https://doi.org/10.1002/sam.11414
-\bibitem{Fadikar} Fadikar et al, Calibrating a Stochastic, Agent-Based Model Using Quantile-Based Emulation. SIAM/ASA Journal on Uncertainty Quantification. https://doi.org/10.1137/17M1161233.
-\bibitem{Surjanovic} Surjanovic et al, Virtual Library of Simulation Experiments: Test Functions and Datasets.
-\bibitem{Takamoto} Takamoto et al, PDEBench: An Extensive Benchmark for Scientific Machine Learning. Thirty-sixth Conference on Neural Information Processing Systems Datasets and Benchmarks Track
-\bibitem{Tuo} Tuo et al, A theoretical framework for calibration in computer models: parametrization, estimation and convergence properties. 
 \bibitem{Park} Park et al, Inference on high-dimensional implicit dynamic models using a guided intermediate resampling filter
 
 \end{thebibliography}
