--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -104,26 +104,14 @@ non-dynamic setting. Building upon this foundation, I will then work to embed th
  \text{Virtual Library of Simulation Experiments} \cite{Surjanovic}, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This ecological simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to validate against more computationally intensive approaches. This work will contribute novel theoretical results and off-the-shelf, scalable algorithms for emulator uncertainty propagation in statistical inference, supplanting existing ad hoc approaches with rigorous, validated methodology. 
 
  \textbf{2. Spatiotemporal Dynamics.}
- The next phase of my proposal involves embedding computer models within a spatiotemporal statistical framework, while continuing to build upon the uncertainty quantification work detailed above. I will adopt a modern state-space framework, drawing from recent advances in Bayesian filtering 
+ The next phase of my proposal involves embedding computer models within a spatiotemporal statistical framework, while continuing to build upon the uncertainty quantification methods detailed above. I will adopt a modern state-space framework, drawing from recent advances in Bayesian filtering 
  \cite{Sarkka} and dynamic spatiotemporal modeling \cite{Wikle, Hefley}.  
 To explicitly model spatiotemporal dynamics, I will consider the general data model
  \[y(s, t) = f(\theta(s, t)) + \epsilon(s, t)\]
- where observed data $y$, process parameters $\theta$, and error $\epsilon$ are all modeled as spatiotemporal processes. I will then formulate dynamic models for the parameters. For example, the process parameters can be assumed to follow a Markovian linear model
- \[\theta_t = H_{\gamma_t} \theta_{t - 1} + \delta_t\]
- where $\theta_t := (\theta_t(s_1), \dots, \theta_t(s_m))$ denotes the process parameters at time $t$ and spatial locations $s_1, \dots, s_m$, 
- and $H_{\gamma_t}$ is a transition matrix that potentially depends on some time-varying parameters $\gamma_t$. These extensions yield high-dimensional 
- hierarchical models that pose problems for existing inference algorithms. To address these issues I will develop novel methodology that extends recent work on inference for high-dimensional partially observed dynamic systems \cite{Park}. Integrating these methods with my Gaussian process emulation and uncertainty quantification framework will face the additional computational bottleneck posed by the poor scalability of Gaussian process prediction. To address this I will adopt a well-known local Gaussian process approximation [cite], making adjustments to correctly propagate the additional approximation uncertainty. I will validate these methods using \textit{PDEBench}, a recent effort to collect standardized benchmark models and metrics in scientific machine learning \cite{Takamoto}. I will further validate my methodology by calibrating the SIPNET carbon model over the contiguous United States, and ultimately progress to similar tests of the more computationally-intensive ED2 carbon model \cite{Fer, Fer2}.
- 
- 
-With methodologically sound and scalable algorithms in hand for the baseline static framework, I will then be in a position to begin investigating spatiotemporal generalizations of the statistical model. Given the spatiotemporal nature of most physical processes, this is an important extension that is often ignored, presumably due to computational challenges (\cite{Fer2}, [another citation]). Parameters $\theta$ may naturally be thought to vary over space
-and time; even if they are believed to be static, a dynamic model allows for spatially and temporally varying uncertainty estimates, which can help identify 
-missing processes in physical models, as well as provide a greater understanding of how models generalize beyond observed data \cite{Fer2, Dietze}. To address these issues I will extend the data model as 
-  \[y(s, t) = f(\theta(s, t)) + \epsilon(s, t)\]
- where observed data $y$, process parameters $\theta$, and error $\epsilon$ are all modeled as spatiotemporal processes. Researchers in both the spatiotemporal statistics and computer modeling communities
-have noted the potential for integrating methods in both fields using modern advances in machine learning and computation \cite{Wikle, Baker}. My proposed research will bridge this divide by (i.) developing novel techniques to integrate modern spatiotemporal dynamical models \cite{Wikle, Hefley}
-within the computer modeling emulation framework, (ii.) develop dimensionality reduction and approximation methods that draw from Bayesian inverse problem 
-theory \cite{Kugler} and Bayesian filtering \cite{Sarkka}, and (iii.) extend my previous uncertainty quantification methodology to this more complex setting. 
- 
+ where observed data $y$, process parameters $\theta$, and error $\epsilon$ are all modeled as spatiotemporal processes. I will then formulate dynamic models for the parameters. For example, the process parameters can be assumed to follow a Markovian linear model 
+ $\theta_t = H \theta_{t - 1} + \delta_t$, where $\theta_t$ is a a spatially-index vector of process parameters at time $t$, $H$ ia a transition matrix, and $\delta_t$ is an error term. 
+These extensions yield high-dimensional 
+ hierarchical models that pose problems for existing inference algorithms. To address these issues I will develop novel methodology that extends recent work on inference for high-dimensional partially observed dynamic systems \cite{Park}. Integrating these methods with my Gaussian process emulation and uncertainty quantification framework will face the additional computational bottleneck posed by the poor scalability of Gaussian process prediction. To deal with this I will adopt a well-known parallelizable local Gaussian process approximation \cite{Gramacy}, making adjustments to correctly propagate the additional approximation uncertainty. I will validate these methods using \textit{PDEBench}, which offers a suite of time-varying simulations as benchmarks for scientific machine learning methods \cite{Takamoto}. I will further validate my methodology by scaling the SIPNET carbon model calibration to cover the contiguous United States, and ultimately progress to similar tests of the more computationally-intensive ED2 carbon simulator \cite{Fer, Fer2}.
 
 \begin{thebibliography}{20}
 \bibitem{Willcox} Willcox, K.E., Ghattas, O. \& Heimbach, P. The imperative of physics-based modeling and inverse theory in computational science. Nat Comput Sci 1, 166–168 (2021). https://doi.org/10.1038/s43588-021-00040-z
@@ -147,17 +135,11 @@ S0962492910000061.
 \bibitem{Takamoto} Takamoto et al, PDEBench: An Extensive Benchmark for Scientific Machine Learning. Thirty-sixth Conference on Neural Information Processing Systems Datasets and Benchmarks Track
 \bibitem{Dietze} Dietze et al, “Iterative near-term ecological forecasting: Needs, opportunities, and challenges”, Proceedings of the National Academy of Sciences, 115, 7, 1424-1432, 2018.
 \bibitem{Tuo} Tuo et al, A theoretical framework for calibration in computer models: parametrization, estimation and convergence properties. 
-
-
-\bibitem{Cayelan} Cayelan C. Carey, Whitney M. Woelmer, Mary E. Lofton, Renato J. Figueiredo, Bethany J. Bookout, Rachel S. Corrigan, Vahid Daneshmand, Alexandria G. Hounshell, Dexter W. Howard, Abigail S. L. Lewis et al (2022) Advancing lake and reservoir water quality management with near-term, iterative ecological forecasting, Inland Waters, 12:1, 107-120, DOI: 10.1080/20442041.2020.1816421
-\bibitem{Fer2} Istem Fer, Alexey Shiklomanov, Kimberly A. Novick, Christopher M. Gough, M. Altaf Arain, Jiquan Chen, Bailey Murphy, Ankur R. Desai, Michael C. Dietze: Capturing site-to-site variability through Hierarchical Bayesian calibration of a process-based dynamic vegetation model, bioRxiv 2021.04.28.441243; doi: https://doi.org/10.1101/2021.04.28.441243. 
-\bibitem{Arab} Arab, Ali \& Hooten, Mevin \& Wikle, Christopher. (2007). Hierarchical Spatial Models. Encyclopedia of geographical information science.
-\bibitem{Hefley} Trevor J. Hefley, Mevin B. Hooten, Ephraim M. Hanks, Robin E. Russell, Daniel P. Walsh, Dynamic spatio-temporal models for spatial data, Spatial Statistics.
-\bibitem{Kugler} Benoit Kugler, Florence Forbes, Sylvain Douté. Fast Bayesian Inversion for high dimensional inverse problems. Statistics and Computing, Springer Verlag (Germany), In press. ffhal-02908364v3f
 \bibitem{Sarkka} Särkkä, S. (2013). Bayesian Filtering and Smoothing (Institute of Mathematical Statistics Textbooks). Cambridge: Cambridge University Press. doi:10.1017/CBO9781139344203
-\bibitem{Waring} Richard H. Waring, Steven W. Running, CHAPTER 10 - Advances in Eddy-Flux Analyses, Remote Sensing, and Evidence of Climate Change, Forest Ecosystems (Third Edition), Academic Press, 2007, Pages 317-344, ISBN 9780123706058, https://doi.org/10.1016/B978-012370605-8.50017-7.
-\bibitem{Clark} Clark, James S. 2005. Why environmental scientists are becoming Bayesians. Ecology Letters, Vol. 8: 2-14
-\bibitem{Park} Park et al, Inference on high-dimensional implicit dynamic models using a guided intermediate resampling filter
+\bibitem{Hefley} Trevor J. Hefley, Mevin B. Hooten, Ephraim M. Hanks, Robin E. Russell, Daniel P. Walsh, Dynamic spatio-temporal models for spatial data, Spatial Statistics.
+\bibitem{Park} Park et al, Inference on high-dimensional implicit dynamic models using a guided intermediate resampling filter.
+\bibitem{Gramacy} Gramacy et al, Local Gaussian process approximation for large computer experiments, 2013.
+\bibitem{Fer2} Istem Fer, Alexey Shiklomanov, Kimberly A. Novick, Christopher M. Gough, M. Altaf Arain, Jiquan Chen, Bailey Murphy, Ankur R. Desai, Michael C. Dietze: Capturing site-to-site variability through Hierarchical Bayesian calibration of a process-based dynamic vegetation model, bioRxiv 2021.04.28.441243; doi: https://doi.org/10.1101/2021.04.28.441243. 
 
 \end{thebibliography}
 
