Shortened background paragraph

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -77,9 +77,7 @@ Complex processes are commonly analyzed using a computer model (i.e. \textit{sim
 For example, to study the terrestrial carbon cycle, ecologists use a process model 
 that predicts the net exchange of carbon between an ecosystem and the atmosphere \cite{Fer}. Running the model requires specifying values for parameters that 
 may not be known, such as the soil respiration rate or seasonal leaf growth \cite{Fer}. A Bayesian statistical formulation is typically employed to estimate (i.e. calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. For example, assuming the simple data model $y \sim N(f(\theta), \sigma^2)$ and prior $(\theta, \sigma^2) \sim \pi_0$ allows for inference through summaries of the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2 I)\pi_0(\theta)$, which typically involves using an iterative inference procedure like Markov Chain Monte Carlo (MCMC). In practice, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to fit a Gaussian process 
-emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Fer, Kennedy, Cleary}. A second complication that commonly arises in scientific applications is the challenge of capturing complex spatial and temporal dynamics of the underlying process while accurately quantifying uncertainty across both of these dimensions. 
-Limited by computational constraints, scientists often calibrate physical models in limited spatial and temporal domains, treating process parameters $\theta$ and statistical parameters (e.g. $\sigma^2$) as fixed. For example, terrestrial carbon models are typically calibrated independently at different ecological data collection sites \cite{Fer2}. Large-scale, multi-site parameter calibration has the potential to drastically increase the generalizability of carbon models and improve spatiotemporally-informed decision making. 
-My proposal seeks to address these challenges--emulator uncertainty quantification and spatiotemporal model calibration--with the goal of making such large-scale calibration feasible and accurate. 
+emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Fer, Kennedy, Cleary}. Computational challenges are compounded when statistical models must account for complex spatiotemporal dynamics of the underlying process, as is common in scientific applications. My proposal seeks to advance methodology in emulator-based inference for complex spatiotemporal systems, with the goal of making large-scale calibration of computer models feasible and accurate. 
  
  There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, few studies have focused on correctly propagating emulator uncertainty through the inference procedure. Naive emulation would simply use the Gaussian process mean $m(\theta)$ in place of the process model evaluation $f(\theta)$, thus replacing the true likelihood $N(f(\theta), \sigma^2 I)$
 with the approximation $N(m(\theta), \sigma^2 I)$. This completely ignores the uncertainty introduced by using $\hat{f}$ in place of $f$, leading to overly confident posterior estimates. Ad hoc methods to propagate emulator uncertainty have included a pointwise variance adjustment 
@@ -108,8 +106,10 @@ These extensions yield high-dimensional
 \section{Stuff to move to broader impacts or intellectual merit}
 \begin{itemize}
 \item For example, Gaussian process emulation is commonly employed in terrestrial carbon modeling to calibrate sophisticated carbon cycle simulations that can have a runtime of many hours \cite{Fer}.
+\item For example, terrestrial carbon models are typically calibrated independently at different ecological data collection sites \cite{Fer2}.
+\item Large-scale, multi-site parameter calibration has the potential to drastically increase the generalizability of carbon models and improve spatiotemporally-informed decision making. 
 \end{itemize}
-c
+
 \begin{thebibliography}{20}
 \bibitem{Willcox} Willcox, K.E., Ghattas, O. \& Heimbach, P. The imperative of physics-based modeling and inverse theory in computational science. Nat Comput Sci 1, 166–168 (2021). https://doi.org/10.1038/s43588-021-00040-z
 \bibitem{Laubmeier} Laubmeier et al. Ecological Dynamics: Integrating Empirical, Statistical, and Analytical Methods. Trends Ecol Evol. 2020 Dec;35(12):1090-1099. doi: 10.1016/j.tree.2020.08.006. Epub 2020 Sep 12. PMID: 32933777.
