Progress on proposal

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -79,7 +79,9 @@ that predicts the net exchange of carbon between an ecosystem and the atmosphere
 may not be known, such as the soil respiration rate or seasonal leaf growth \cite{Fer}. A Bayesian statistical formulation is typically employed to estimate (i.e. calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. For example, assuming the simple data model $y \sim N(f(\theta), \sigma^2)$ and prior $(\theta, \sigma^2) \sim \pi_0$ allows for inference through summaries of the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2 I)\pi_0(\theta)$, which typically involves using an iterative inference procedure like Markov Chain Monte Carlo (MCMC). In practice, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to fit a Gaussian process 
 emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Fer, Kennedy, Cleary}. Computational challenges are compounded when statistical models must account for complex spatiotemporal dynamics of the underlying process, as is common in scientific applications. My proposal seeks to advance methodology in emulator-based inference for complex spatiotemporal systems, with the goal of making large-scale calibration of computer models feasible and accurate. 
  
- There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, few studies have focused on correctly propagating emulator uncertainty through the inference procedure. Naive emulation would simply use the Gaussian process mean $m(\theta)$ in place of the process model evaluation $f(\theta)$, thus replacing the true likelihood $N(f(\theta), \sigma^2 I)$
+ There remains significant work to be done in scaling to such large and complex settings. One consistent theme in current attempts is that uncertainty quantification is often sacrificed to reduce computational demands, posing problems in settings where physical models inform policy decisions. To date, few studies consider the additional uncertainty introduced by using the emulator $\hat{f}$ is place of the true model $f$. A handful of studies [change word] have adopted ad hoc approaches that use the Gaussian process predictive variance $k(\cdot, \cdot)$ to augment the data variance, e.g. $\sigma^2 + k(\theta, \theta)$ \cite{Fer, Cleary}. While an improvement, these methods 
+ 
+ While the use of Gaussian process emulators has become standard practice, few studies have focused on correctly propagating emulator uncertainty through the inference procedure. Naive emulation would simply use the Gaussian process mean $m(\theta)$ in place of the process model evaluation $f(\theta)$, thus replacing the true likelihood $N(f(\theta), \sigma^2 I)$
 with the approximation $N(m(\theta), \sigma^2 I)$. This completely ignores the uncertainty introduced by using $\hat{f}$ in place of $f$, leading to overly confident posterior estimates. Ad hoc methods to propagate emulator uncertainty have included a pointwise variance adjustment 
 $\sigma^2 + k(\theta, \theta)$ or re-sampling scheme in which a sample $\hat{f}_{\theta} \sim N(m(\theta), k(\theta, \theta))$ replaces $f(\theta)$ as the likelihood mean. \cite{Fer, Cleary}. While an improvement over the naive baseline, these methods treat emulator uncertainty as independent across different values of $\theta$, ignoring the correlation structure captured in the predictive variance $k(\cdot, \cdot)$. Uncertainty quantification is further complicated when spatiotemporal dynamics are included. Modern dynamic hierarchical models provide an ideal framework for quantifying spatial and temporal variation in model parameters \cite{Wikle}, but such models are typically infeasible in computer modeling settings due to their computational demands. The existing computer modeling literature has focused on spatially or temporally indexed simulator outputs \cite{Fadikar}, but rarely considers variation in process parameters. Existing examples of assimilating large-scale spatiotemporal datasets with computer models typically utilize thrifty alternatives to full Bayesian inference, sacrificing uncertainty quantification to ease computational burdens \cite{Sun}.
 
