Progress on NSF proposal

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -78,7 +78,7 @@ For example, to study the terrestrial carbon cycle, ecologists use a process mod
 that predicts the net exchange of carbon between an ecosystem and the atmosphere \cite{Fer}. Running the model requires specifying values for parameters that 
 may not be known, such as the soil respiration rate or seasonal leaf growth \cite{Fer}. A Bayesian statistical formulation is typically employed to estimate (i.e. calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. For example, assuming the simple data model $y \sim N(f(\theta), \sigma^2 I)$ and prior $(\theta, \sigma^2) \sim \pi_0$ allows for inference through summaries of the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2 I)\pi_0(\theta)$, which typically involves using an iterative inference procedure like Markov Chain Monte Carlo (MCMC). In practice, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to fit a Gaussian process 
 emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Fer, Kennedy, Cleary}. Computational challenges are compounded when statistical models must account for complex spatiotemporal dynamics of the underlying process, as is common in scientific applications. My research goal is to advance methodology in emulator-based inference for complex spatiotemporal systems, enabling accurate large-scale calibration of computer models.
- 
+
  There remains significant work to be done in scaling computer model analysis to such complex settings. Existing large-scale calibration schemes typically sacrifice uncertainty quantification to ease computational demands, which is especially problematic when physical models inform policy decisions. To date, few studies consider the uncertainty introduced by the emulator approximation of the true model $f$. Exceptions include an assortment of ad hoc approaches that use the Gaussian process predictive variance $k(\cdot, \cdot)$ to augment the 
  noise term in the data model, e.g. $\sigma^2 + k(\theta, \theta)$ \cite{Fer, Cleary}. While a step in the right direction, these methods treat emulator uncertainty as independent across different values of $\theta$, ignoring the correlation structure captured in the predictive variance $k(\cdot, \cdot)$. Uncertainty is further neglected when process and statistical parameters are treated as fixed, despite the underlying spatiotemporal nature of the physical system. Modern dynamic hierarchical models provide an ideal framework for quantifying spatial and temporal variation in model parameters \cite{Wikle}, but such models are typically infeasible in computer modeling settings due to their computational demands. Existing examples of assimilating large-scale spatiotemporal datasets with computer models typically utilize thrifty alternatives to full Bayesian inference, ignoring posterior uncertainty \cite{Sun}.
  
@@ -89,7 +89,7 @@ emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approx
 
 \noindent
 \textbf{Research Plan.} To address the challenges highlighted above, I will begin by investigating the fundamental issue of emulator uncertainty in the 
-non-dynamic setting. Building upon this foundation, I will then work to embed this core methodology in a dynamic spatiotemporal statistical model. These modeling steps will pose increasingly difficult computational challenges, which I intend to address via an interdisciplinary approach, drawing from spatiotemporal statistics, Bayesian inverse problem theory, and machine learning to develop novel inference methods. Throughout this process, I will validate these methods on benchmark computer modeling and scientific machine learning problems \cite{Surjanovic, Takamoto}, as well as terrestrial carbon models commonly used for ecological forecasting \cite{Dietze}. This work is collaborative in nature, co-advised by Jonathan Huggins, who has expertise in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
+non-dynamic setting. Building upon this foundation, I will work to embed this core methodology in a dynamic spatiotemporal statistical model. These modeling steps will pose increasingly difficult computational challenges, which I will address by developing novel inference methodology and approximation schemes. I will validate these methods on benchmark problems in computer modeling and scientific machine learning \cite{Surjanovic, Takamoto}, as well as terrestrial carbon models actively used in ecological forecasts \cite{Dietze}. This work is collaborative in nature, co-advised by Jonathan Huggins, an expert in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
  
  \textbf{1. Propagating Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty to fill the current gap in the literature. I will develop novel algorithms for propagating Gaussian process uncertainty and compare their performance to the baseline independent variance adjustment schemes detailed above. To incorporate the predictive Gaussian process correlation structure, I will leverage the correlation between the current and proposed parameter values in Metropolis-Hastings MCMC algorithms. For example, the re-sampling scheme \cite{Fer} can be generalized so that 
  $(\hat{f}_{\theta}, \hat{f}_{\theta^\prime})$ are drawn jointly from the Gaussian process, where $\theta$ and $\theta^\prime$ are the current and proposed parameter values, respectively. I will also develop an alternate set of algorithms by integrating the Gaussian process out of the likelihood, thus averaging over the emulator uncertainty. This integral can be calculated jointly over the current and proposed parameter values and has an analytic solution for the independent Gaussian error model. I will then generalize these ideas to error models for simulators with time-indexed output $f(\theta) = (f_1, f_2, \dots, f_T)$, a common feature of ecological simulations. To accomplish this I will analyze two approaches: (i.) reducing the dimensionality of the output via basis-function 
