Progress on NSF proposal

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -97,14 +97,9 @@ I will then generalize these ideas to error models for simulators with time-inde
  \textit{Virtual Library of Simulation Experiments} \cite{Surjanovic}, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This ecological simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to validate against more computationally intensive approaches. This work will contribute novel theoretical results and off-the-shelf, scalable algorithms for emulator uncertainty propagation in statistical inference, supplanting existing ad hoc approaches with rigorous, validated methodology. 
 
  \textbf{2. Spatiotemporal Dynamics.}
- The next phase of my proposal involves embedding computer models within a spatiotemporal statistical framework, while continuing to build upon the uncertainty quantification methods detailed above. I will adopt a state-space framework, drawing from recent advances in Bayesian filtering 
- \cite{Sarkka} and dynamic spatiotemporal modeling \cite{Wikle, Hefley}.  
-To explicitly model spatiotemporal dynamics, I will consider data models of the form
- \[y(s, t) = f(\theta(s, t)) + \epsilon(s, t),\]
- where observed data $y$, process parameters $\theta$, and error $\epsilon$ are all modeled as spatiotemporal processes. I will then formulate dynamic models for the parameters. For example, the process parameters can be assumed to follow a Markovian linear model 
- $\theta_t = H \theta_{t - 1} + \delta_t$, where $\theta_t$ is a a spatially-index vector of process parameters at time $t$, $H$ ia a transition matrix, and $\delta_t$ is an error term. 
-These extensions yield high-dimensional 
- hierarchical models that pose problems for existing inference algorithms. To address these issues I will develop novel methodology that extends recent work on inference for high-dimensional partially observed dynamic systems \cite{Park}. Integrating these methods with my Gaussian process emulation and uncertainty quantification framework will face the additional computational bottleneck posed by the poor scalability of Gaussian process prediction. To deal with this I will adopt a well-known parallelizable local Gaussian process approximation \cite{Gramacy}, making adjustments to correctly propagate the additional approximation uncertainty. I will validate these methods using \textit{PDEBench}, which offers a suite of time-varying simulations as benchmarks for scientific machine learning methods \cite{Takamoto}. I will further validate my methodology by scaling the SIPNET carbon model calibration to cover the contiguous United States, and ultimately progress to similar tests of the more computationally-intensive ED2 carbon simulator \cite{Fer, Fer2}.
+ The next phase of my proposal involves embedding computer simulations within a spatiotemporal statistical model, while continuing to build upon the uncertainty quantification methods detailed above. I will adopt a state-space framework, drawing from recent advances in Bayesian filtering 
+ \cite{Sarkka} and dynamic spatiotemporal modeling \cite{Wikle, Hefley}. I will model outputs and parameters as spatiotemporal processes, considering models generally of the form $y(s, t) = f(\theta(s, t)) + \epsilon(s, t)$. In particular, I will continue to expand upon my previous basis function approach for outputs $y$, and will initially explore linear Markovian models for $\theta$ and $\epsilon$ \cite{Wikle}.
+These extensions yield high-dimensional hierarchical models that pose problems for existing inference algorithms. To address these issues I will develop novel methodology that extends recent work on inference for high-dimensional partially observed dynamic systems \cite{Park}. Integrating these methods with my Gaussian process emulation and uncertainty quantification framework will face the additional computational bottleneck posed by the poor scalability of Gaussian process prediction. To deal with this I will adopt a well-known parallelizable local Gaussian process approximation \cite{Gramacy}, making adjustments to correctly propagate the additional approximation uncertainty. I will validate these methods using \textit{PDEBench}, which offers a suite of time-varying simulations as benchmarks for scientific machine learning methods \cite{Takamoto}. I will further validate my methodology by scaling the SIPNET carbon model calibration to cover the contiguous United States, and ultimately progress to similar tests of the more computationally-intensive ED2 carbon simulator \cite{Fer, Fer2}.
 
 \section{Stuff to move to broader impacts or intellectual merit}
 \begin{itemize}
